--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -1,6 +1,8 @@
 {
     "GEN": {
-      "CANCEL": "Annuller"
+      "CANCEL": "Annuller",
+      "SHOW": "Vis",
+      "PER-PAGE": "Per side"
     },
     "NAV": {
       "DASHBOARD": "Dashboard",
@@ -8,7 +10,8 @@
       "ALL-IOT-DEVICES": "Alle IoT enheder"
     },
     "APPLICATION": {
-      "CREATE": "Opret applikation"
+      "CREATE": "Opret applikation",
+      "SAVE": "Gem applikation"
     },
     "APPLICATION-TABLE": {
       "NAME": "NAVN",
@@ -16,10 +19,12 @@
       "UPDATED": "SENEST OPDATERET"
     },
     "APPLICATION-TABLE-ROW": {
-      "DELETE": "Slet"
+      "DELETE": "Slet",
+      "EDIT": "Redigér"
     },
     "FORM": {
-      "CREATE-NEW-APPLICATION": "Opret ny applikation"
+      "CREATE-NEW-APPLICATION": "Opret ny applikation",
+      "EDIT-NEW-APPLICATION": "Redigér applikation"
     },
     "QUESTION": {
       "GIVE-APPLICATION-NAME": "Navngiv applikation",
