--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,21 +16,32 @@
     "APPLICATION-TABLE": {
       "NAME": "NAME",
       "IOT-DEVICES": "IOT DEVICES",
-      "UPDATED": "LATEST UPDATE"
+      "UPDATED": "LAST UPDATED"
     },
     "APPLICATION-TABLE-ROW": {
       "DELETE": "Delete",
-      "EDIT": "Edit"
+      "EDIT": "Edit",
+      "SHOW-OPTIONS": "Show options"
     },
     "FORM": {
       "CREATE-NEW-APPLICATION": "Create new application",
-      "EDIT-NEW-APPLICATION": "Edit application"
+      "EDIT-NEW-APPLICATION": "Edit application",
+      "CREATE-NEW-IOT-DEVICE": "Add IoT unit"
     },
     "QUESTION": {
       "GIVE-APPLICATION-NAME": "Name application",
       "APPLICATION-NAME-PLACEHOLDER": "Name of the application",
       "GIVE-APPLICATION-DESCRIPTION": "Describe application",
       "APPLICATION-DESCRIPTION-PLACEHOLDER": "Short description of the application"
+    },
+    "SORT": {
+      "SORT": "Sort by",
+      "UPDATED-ASCENDING": "Last updated: acsending",
+      "UPDATED-DESCENDING": "Last updated: faldende",
+      "CREATED-ASCENDING": "Created: acsending",
+      "CREATED-DESCENDING": "Created: faldende",
+      "NAME-ASCENDING": "Name: acsending",
+      "NAME-DESCENDING": "Name: faldende"
     }
 }
   
