--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -10,7 +10,8 @@
     "NAV": {
       "DASHBOARD": "Dashboard",
       "MY-APPLICATIONS": "Mine applikationer",
-      "ALL-IOT-DEVICES": "Alle IoT enheder"
+      "ALL-IOT-DEVICES": "Alle IoT enheder",
+      "MINE-LORA-GATEWAYS": "Mine LoRaWan Gateways"
     },
     "APPLICATION": {
       "CREATE": "Opret applikation",
