--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -40,6 +40,9 @@
       "ACTIVE": "AKTIV",
       "DATA": "DATA(24 TIMER)"
     },
+    "LORA-GATEWAY-TABLE": {
+      "NAME": "Navn"
+    },
     "IOT-DEVICE-TYPES": {
       "GENERIC_HTTP": "Generisk HTTP"
     },
