IOT-33 add table, row and models

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -41,6 +41,9 @@
       "ACTIVE": "AKTIV",
       "DATA": "DATA(24 TIMER)"
     },
+    "LORA-GATEWAY-TABLE": {
+      "NAME": "Navn"
+    },
     "IOT-DEVICE-TYPES": {
       "GENERIC_HTTP": "Generisk HTTP"
     },
