--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -12,7 +12,7 @@
       "DASHBOARD": "Dashboard",
       "MY-APPLICATIONS": "Mine applikationer",
       "ALL-IOT-DEVICES": "Alle IoT enheder",
-      "MINE-LORA-GATEWAYS": "Mine LoRaWan Gateways"
+      "MY-LORA-GATEWAYS": "Mine LoRaWan Gateways"
     },
     "APPLICATION": {
       "CREATE": "Opret applikation",
