IOT-326 fix change application on edit device

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -22,7 +22,7 @@
       "ATTACHED-IOT": "Tilknyttede IoT enheder"
     },
     "IOT-DEVICE": {
-      "CREATE": "Opret IoT enhed",
+      "CREATE": "Gem IoT enhed",
       "SAVE": "Gem IoT enhed",
       "DELETE": "Slet IoT enhed",
       "RESTART": "Genstart IoT enhed"
