IOT-227 fix error handling - temp fix

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -118,5 +118,8 @@
         "APIKEY": "API kald",
         "INSTRUCTIONS": "Du kalder denne url:"
       }
+    },
+    "MESSAGE": {
+      "NAME-INVALID-OR-ALREADY-IN-USE": "En applikation med det navn findes allerede"
     }
 }
