IOT-350 add titles

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -30,7 +30,11 @@
       "LONGITUDE": "Længdegrad",
       "LATITUDE":"Breddegrad",
       "ALTITUDE":"Højde",
-      "SAVE": "Gem gateway"
+      "SAVE": "Gem gateway",
+      "ID": "Gateway ID",
+      "LOCATION": "Placering",
+      "TAGS": "Tags",
+      "NAME": "Gatewayens navn"
     },
     "IOT-DEVICE": {
       "CREATE": "Gem IoT enhed",
