remove all-iot-enheder & dashboard

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -197,9 +197,9 @@
       "DROPDOWN": "Håndter service profil",
       "EDIT": "Editer service profil",
       "DELETE": "Slet service profil",
-      "NAME": "Navn",
+      "NAME": "Service-profil navn",
       "REPORTBATTERYSTATUS": "Report battery status",
-      "ADDGWMETADATA": "Tilføjet GW meta data",
+      "ADDGWMETADATA": "Tilføjet gateway meta-data",
       "DRRATEMIN": "Min date rate",
       "DRRATEMAX": "Max date rate",
       "REPORT_END_DEVICE": "Report end-device margin",
