--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -16,7 +16,7 @@
     "DATATARGET": "Datatarget",
     "MY-DATATARGET": "Tilbage",
     "DATATARGET-APPLIKATION": "for applikation:",
-    "PROFILES": "Profiler",
+    "PROFILES": "Lorawan Profiler",
     "PAYLOAD-DECODER": "Payload Decoder"
   },
   "APPLICATION": {
