--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -236,17 +236,20 @@
       "EDIT": "Rediger profil",
       "DELETE": "Slet profil",
       "NAME": "Service-profil navn",
+      "NAME_PLACEHOLDER": "service-profil-navn-uden-mellemrum",
       "ADDGWMETADATA": "Tilføj gateway meta-data",
       "ADDGWMETADATAEXPLAINED": "GW-metadata (RSSI, SNR, GW geoloc. Osv.) Føjes til den pakke, der sendes til applikationsserveren",
       "NWKGEOLOC": "Aktivér geografisk placering af netværk",
       "NWKGEOLOCEXPLAINED": "Når den er aktiveret, forsøger netværksserveren at løse placeringen af â€‹â€‹enhederne under denne serviceprofil. Bemærk, at du skal have gateways, der understøtter fine-timestamp, og at netværksserveren skal konfigureres for at yde support til geolokalisering.",
       "REPORT_END_DEVICE": "Report end-device margin",
       "DEVICEFREQUENCY": "Device-status request frequency",
-      "DEVICEFREQUENCYEXPLANIED": "Frekvens til at starte en anmodning om end-device (request/dag). Sæt til 0 for at deaktivere.",
+      "DEVICEFREQUENCYEXPLANIED": "Frekvens til at starte en anmodning om end-device (request/dag).",
       "REPORTBATTERYSTATUS": "Rapporter enhedens batteriniveau til applikationsserveren",
       "REPORTBATTERYMARGIN": "Rapporter device link margin til applikationsserver",
       "DRRATEMIN": "Min date rate",
+      "DRRATEMINEXPLAINED": "Minimums tilladte data rate. Brugt til ADR",
       "DRRATEMAX": "Max date rate",
+      "DRRATEMAXEXPLAINED": "Maximums tilladte data rate. Brugt til ADR",
       "SAVE": "Gem",
       "CANCEL": "Annuller",
       "GOBACK": "Gå tilbage",
